<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_all">CA</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button8">8</string>
    <string name="buttonSum">+</string>
    <string name="buttonEqual">=</string>
    <string name="button7">7</string>
    <string name="buttonSubs">-</string>
    <string name="button6">6</string>
    <string name="button4">4</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button5">5</string>
    <string name="button9">9</string>
    <string name="buttonMultiply">x</string>
    <string name="buttonDivision">÷</string>
    <string name="buttonR">R</string>
</resources>