<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C7C7C"
    android:backgroundTint="#BFBFBF"
    android:textAlignment="textEnd"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/enBlanco1"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/enBlanco2"
        android:layout_width="90dp"
        android:layout_height="79dp"
        android:backgroundTint="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <Button
        android:id="@+id/button0"
        android:layout_width="89dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="0"
        android:text="@string/button0"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="89dp"
        android:layout_height="78dp"
        android:backgroundTint="#AAC0FF"
        android:onClick="escribirResultado"
        android:text="@string/buttonEqual"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/buttonSum"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#82C67E"
        android:onClick="escribirOperador"
        android:tag="+"
        android:text="@string/buttonSum"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonSubs"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#82C67E"
        android:onClick="escribirOperador"
        android:tag="-"
        android:text="@string/buttonSubs"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#82C67E"
        android:onClick="escribirOperador"
        android:tag="*"
        android:text="@string/buttonMultiply"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="90dp"
        android:layout_height="78dp"
        android:backgroundTint="#82C67E"
        android:onClick="escribirOperador"
        android:tag="/"
        android:text="@string/buttonDivision"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <Button
        android:id="@+id/buttonR"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:backgroundTint="#82C67E"
        android:onClick="escribirOperador"
        android:tag="%"
        android:text="@string/buttonR"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/buttonClearAll"
        android:layout_width="185dp"
        android:layout_height="77dp"
        android:backgroundTint="#AAC0FF"
        android:onClick="clearAll"
        android:text="@string/clear_all"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <Button
        android:id="@+id/button1"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="1"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="2"
        android:text="@string/button2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <Button
        android:id="@+id/button3"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="3"
        android:text="@string/button3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845" />

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="4"
        android:text="@string/button4"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="5"
        android:text="@string/button5"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/button6"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="6"
        android:text="@string/button6"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/button7"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="7"
        android:text="@string/button7"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <Button
        android:id="@+id/button8"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="8"
        android:text="@string/button8"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <Button
        android:id="@+id/button9"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="escribirOperando"
        android:tag="9"
        android:text="@string/button9"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <TextView
        android:id="@+id/TextViewOperation"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:clickable="false"
        android:editable="false"
        android:numeric="integer"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:text="@string/button0"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/TextViewResult"
        android:layout_width="171dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:clickable="false"
        android:editable="false"
        android:numeric="integer"
        android:text="@string/button0"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        tools:ignore="Deprecated" />

</androidx.constraintlayout.widget.ConstraintLayout>